Fix another html errors in testing

--- a/home/templates/home/support/contact.html
+++ b/home/templates/home/support/contact.html
@@ -100,17 +100,19 @@
                                         <div class="card-body">
                                             <p>You can reach us through various channels:</p>
                                             <ul>
-                                                <li>Fill out our <a href="{% url 'contact_form' %}" target="_blank">Contact Us</a> form
+                                                <li>Fill out our <a href="{% url 'contact_form' %}"
+                                                        target="_blank">Contact Us</a> form
                                                     on the website.</li>
                                                 <li>Join our Discord server for real-time assistance and community
                                                     interactions.</li>
                                                 <li>Email us at "support@grip.com" for any specific requests or
                                                     inquiries.</li>
                                                 <li>Connect with us on social media for updates and news: follow us on
-                                                    <a
-                                                        href="https://www.facebook.com/profile.php?id=61555501545729" target="_blank">Facebook</a>,
+                                                    <a href="https://www.facebook.com/profile.php?id=61555501545729"
+                                                        target="_blank">Facebook</a>,
                                                     <a href="https://twitter.com" target="_blank">Twitter</a>, and <a
-                                                        href="https://www.instagram.com" target="_blank">Instagram</a>.</li>
+                                                        href="https://www.instagram.com" target="_blank">Instagram</a>.
+                                                </li>
                                             </ul>
                                             <p>We're here to help and also share exciting updates with our community!
                                             </p>
@@ -149,7 +151,8 @@
                                                 your data. In compliance with the General Data Protection Regulation
                                                 (GDPR), we prioritize the privacy and protection of your information.
                                                 For more details, please refer to our <a
-                                                    href="https://www.termsfeed.com/live/9859ad1d-04db-4615-bd66-3e53d4ca5354" target="_blank">Privacy
+                                                    href="https://www.termsfeed.com/live/9859ad1d-04db-4615-bd66-3e53d4ca5354"
+                                                    target="_blank">Privacy
                                                     Policy</a>.</p>
                                         </div>
                                     </div>
@@ -172,4 +175,6 @@
 
 
         </div>
-        {% endblock %}
+    </div>
+
+    {% endblock %}
